tests/baselines/reference/FunctionDeclaration6_es6.errors.txt
FunctionDeclaration6_es6.ts(1,18): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


==== FunctionDeclaration6_es6.ts (1 errors) ====
    function*foo(a = yield) {
                     ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
    }